Fixed icon spacing in settings on Windows

--- a/src/renderer/pages/Settings.module.scss
+++ b/src/renderer/pages/Settings.module.scss
@@ -63,6 +63,7 @@
 
     img {
       cursor: pointer;
+      margin-right: 0.3rem;
     }
   }
 
@@ -79,6 +80,7 @@
 
     img {
       cursor: pointer;
+      margin-right: 0.3rem;
     }
   }
 
